mdapipkg/unpackaged/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Ambition_Future_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ambition/Future plans</inlineHelpText>
        <label>Ambition/Future Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Interest__c</fullName>
        <label>Brand Interest</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cent Pur Cent</fullName>
                </value>
                <value>
                    <fullName>i.am.klean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPC_Scoring__c</fullName>
        <label>CPC Scoring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                    <default>true</default>
                    <label>B2B</label>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>Divers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_During_Lunchtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed During Lunchtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_On__c</fullName>
        <label>Closed On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concept_Alignment_with_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Alignment with the brand&apos;s values, image, and target market</inlineHelpText>
        <label>Concept: Alignment with Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Knowledge_of_Ingredients__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Knowledge of ingredients</inlineHelpText>
        <label>Concept: Knowledge of Ingredients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Opportunity_for_All_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity to sell all product lines by IAK (Makeup &amp; Home)</inlineHelpText>
        <label>Concept: Opportunity for All Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Sustainability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sustainability initiatives &amp; Eco/Natural brands</inlineHelpText>
        <label>Concept: Sustainability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>Why is this lead disqualified?</description>
        <inlineHelpText>Why is this lead disqualified?</inlineHelpText>
        <label>Disqualified Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existing customer database for newsletters or loyalty program members</inlineHelpText>
        <label>Existing Customer Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finances_Healthy_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Healthy business</inlineHelpText>
        <label>Finances: Healthy Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Oppty_after_lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>First Oppty after lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAK_Pre_Scoring__c</fullName>
        <formula>IF( Prime_Location_Medium_High_Foot_Traffic__c , 1, 0) +
IF( Finances_Healthy_Business__c  , 1, 0) +
IF( Concept_Alignment_with_Brand__c  , 1, 0)+
IF( Concept_Knowledge_of_Ingredients__c  , 1, 0)+
IF( Concept_Opportunity_for_All_Lines__c  , 1, 0)+
IF( Concept_Sustainability__c , 1, 0)+
IF( Mkt_Sales_Existing_Website_Webshop__c , 1, 0)+
IF( Mkt_Sales_Opport_Workshops_events__c  , 1, 0)+
IF( Mkt_Sales_Social_Media_Platforms__c  , 1, 0)+
IF( MKT_Sales_Staff_Trained_in_Makeup__c  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAK Pre Scoring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MKT_Sales_Staff_Trained_in_Makeup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Staff is trained in makeup techniques (application)</inlineHelpText>
        <label>MKT &amp; Sales: Staff Trained in Makeup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Order_Quantities_Purchase_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ability to meet minimum order quantities and honour purchase commitments</inlineHelpText>
        <label>Min Order Quantities + Purchase Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Existing_Website_Webshop__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existing website &amp; Webshop with proper maintenance</inlineHelpText>
        <label>Mkt &amp; Sales: Existing Website &amp; Webshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Opport_Workshops_events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunities for workshops or events related to the brand</inlineHelpText>
        <label>Mkt &amp; Sales: Opport. Workshops-events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Social_Media_Platforms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Online presence and engagement on social media platforms</inlineHelpText>
        <label>Mkt &amp; Sales: Social Media Platforms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prime_Location_Medium_High_Foot_Traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Location: Medium-High Foot Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_is_Data_driven__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prospect is data-driven. (Knows his/her numbers and works towards goals)</inlineHelpText>
        <label>Prospect is Data-driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ranking</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remider_Date_for_Nurture_Lead__c</fullName>
        <label>Remider Date for Nurture Lead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Titular</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Assistant</fullName>
                </value>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>Beautician</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subchannel__c</fullName>
        <label>Subchannel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Divers</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Conceptstore</fullName>
                </value>
                <value>
                    <fullName>Deco &amp; Interiour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National regime</fullName>
                </value>
                <value>
                    <fullName>Intra-Community Regime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <inlineHelpText>To be sent to Odoo, make sure this is a valid VAT number, in format BE0123456789</inlineHelpText>
        <label>VAT Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webshop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Willing_Training_Staff_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Willingness to receive training or invest in staff development</inlineHelpText>
        <label>Willing Training + Staff Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Willing_to_Learn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Willingness to learn about ingredients/techniques etc… (Rigorgeous days/Blush)</inlineHelpText>
        <label>Willing to Learn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Window_Display_Product_Showcasing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Window display options and opportunities for showcasing the brand&apos;s products</inlineHelpText>
        <label>Window Display + Product Showcasing</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Brand_Interest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Brand_Interest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <validationRules>
        <fullName>Disqualify_Reason_Mandatory</fullName>
        <active>true</active>
        <description>to make sure a disqualify reason is added when a lead is disqualified</description>
        <errorConditionFormula>AND(
TEXT( Status ) = &quot;Disqualified&quot;,
ISBLANK( Disqualified_Reason__c )
)</errorConditionFormula>
        <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
        <errorMessage>Please add a reason this lead is disqualified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_Pricebook</fullName>
        <active>true</active>
        <errorConditionFormula>Price_Book__r.IsActive = FALSE</errorConditionFormula>
        <errorMessage>The selected pricebook is inactive, please select an active one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Info_complete_before_conversion</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted
&amp;&amp;
 Ready_for_Conversion__c =false</errorConditionFormula>
        <errorMessage>Please fill in all data with the button &apos;Prepare for conversion&apos; before converting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Label_needed_before_conversion</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted = TRUE
&amp;&amp;
 ISBLANK(Labels__c )</errorConditionFormula>
        <errorMessage>Please add at least one label before converting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAT_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(VAT_Number__c )),
NOT( REGEX( VAT_Number__c , &quot;[BE]{2}[0-9]{10}&quot;)),
NOT( REGEX( VAT_Number__c , &quot;[NL]{2}[0-9]{10}&quot;)),
$Profile.Name &lt;&gt; &apos;Salesforce API Only System Integrations&apos;)</errorConditionFormula>
        <errorMessage>The VAT format needs to be &quot;BE0477472701&quot;</errorMessage>
    </validationRules>
</CustomObject>